fixed bug with icons not showing in weekly forecast;

--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,9 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.weekly-card-body .icon-weather-weekly {
+  color: var(--pink);
+}
 
 .weekly-card-body .date {
   min-width: 180px;
